--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "aternos-afk-bot",
+  "name": "afk-bot",
   "version": "1.0.0",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "mineflayer": "^4.5.0"
   }
 }
